# AIM

./: .directory  .gitignore  Baryons.hpp  Baryons_A.cpp  Baryons_A.hpp  CMakeLists.txt  Doxyfile  Parametric_funcs.cpp  Parametric_funcs.hpp  README.md  Structs.hpp  Tests.cpp  axi.cpp  axi_psdf.kdev4  howto.cpp  inversion.c  main.cpp  setup.py  tests.cpp  wrapper.cpp
.doc/html/: Baryons_8hpp_source.html  Baryons__A_8hpp_source.html  Parametric__funcs_8hpp_source.html  Structs_8hpp_source.html  classBaryons-members.html  classBaryons__A-members.html  classBaryons__A.html  classBaryons__A__coll__graph.md5  classBaryons__A__inherit__graph.md5  classBaryons__inherit__graph.map  classParametric__funcs-members.html  classParametric__funcs.html  classes.html  graph_legend.html  inherit_graph_1.map  inherit_graph_10.map  inherit_graph_10.md5  inherit_graph_11.map  inherit_graph_11.md5  inherit_graph_12.map  inherit_graph_12.md5  inherit_graph_13.map  inherit_graph_13.md5  inherit_graph_5.map  inherit_graph_5.md5  inherit_graph_6.map  inherit_graph_6.md5  inherit_graph_7.map  inherit_graph_7.md5  inherit_graph_8.map  inherit_graph_8.md5  inherit_graph_9.map  inherit_graph_9.md5  inherits.html  structbulge__2p-members.html  structbulge__2p.html  structdisk__3p-members.html  structdisk__3p.html  structhalo__2p.html  structhalo__3p.html  (+16 more)
.kdev4/: axi_psdf.kdev4
src/: Inversion.cpp  Inversion.hpp  InversionInterp.cpp  InversionInterp.hpp  Model.cpp  Model.hpp  Numeric_funcs.cpp  Numeric_funcs.hpp  Observables.cpp  Observables.hpp  Parametric_funcs.cpp  Parametric_funcs.hpp  Structs.hpp
(+79 files in other folders)
